--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "react-window-size": "^1.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start-dev": "react-scripts start",
+    "build": "npm run build-less && react-scripts build ",
+    "build-less": "lessc ./src/styles/less/index.less ./src/styles/css/index.css",
     "watch-less": "less-watch-compiler ./src/styles/less ./src/styles/css",
     "test": "react-scripts test",
+    "start": "serve -s build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
